fix: change timezone text align to bottom

--- a/src/css/week/time.styl
+++ b/src/css/week/time.styl
@@ -70,7 +70,7 @@
         line-height: 12px
         text-align: right
         display: table-cell
-        vertical-align: middle
+        vertical-align: bottom
 
     // Todaymarker
     .todaymarker
